[workspace]
members = [
    "blood_types_s",
    "brackets_matching",
    "brain_fuck",
    "count_factorial_steps",
    "counting_words",
    "display_table",
    "drop_the_blog",
    "filter_table",
    "flat_tree",
    "insertion_sort",
    "inv_pyramid",
    "matrix_determinant",
    "matrix_multiplication",
    "min_and_max",
    "modify_letter",
    "nextprime",
    "office_worker",
    "order_books",
    "partial_sums",
    "previousprime",
    "prime_checker",
    "profanity_filter",
    "queens",
    "reverse_it",
    "rot21",
    "rpn",
    "scytale_decoder",
    "smallest"
]
